# tyranny

./: svn-commit.tmp
client/trunk/: resources.qrc  trunk.pro
client/trunk/src/: authdialog.cpp  authdialog.h  boardview.cpp  boardview.h  client.cpp  gameprotocol.cpp  gameprotocol.h  gamewindow.cpp  gamewindow.h  iohandler.cpp  iohandler.h  mainwindow.cpp  mainwindow.h  netmanager.cpp  netmanager.h  packet.cpp  packet.h  prefdialog.cpp  prefdialog.h  profiledialog.cpp  profiledialog.h  protspec.h  roomdata.h  rulesdialog.cpp  rulesdialog.h  settingsdialog.cpp  settingsdialog.h  statsdialog.cpp  statsdialog.h  tokenchooser.cpp  tokenchooser.h  turndialog.cpp  turndialog.h  userlistdialog.cpp  userlistdialog.h
client/trunk/src/ui/: authdialog.ui  gamewindow.ui  mainwindow.ui  prefdialog.ui  profiledialog.ui  rulesdialog.ui  settingsdialog.ui  statsdialog.ui  tokenchooser.ui  turndialog.ui  userlistdialog.ui
game_server/trunk/: Makefile.am  autogen.sh  configure.in
game_server/trunk/src/: Makefile.am  aiplayer.cpp  aiplayer.h  clientsocket.h  config.xml  configfile.cpp  configfile.h  fdbuffer.cpp  fdbuffer.h  game.cpp  game.h  gameserver.cpp  gameserver.h  human.cpp  human.h  lockable.h  packet.cpp  packet.h  player.cpp  player.h  protocol.cpp  protocol.h  protspec.h  room.cpp  room.h  roomengine.cpp  roomengine.h  serversocket.cpp  serversocket.h  utilities.cpp  utilities.h
lobby_server/trunk/: INSTALL  configure.in
lobby_server/trunk/src/: Makefile.am  clientsocket.cpp  config.xml  configfile.cpp  configfile.h  dbmysql.cpp  dbmysql.h  lobbyserver.cpp  lobbyserver.h  packet.cpp  packet.h  protocol.cpp  protocol.h  protspec.h  room.cpp  room.h  schema.sql  serverpool.cpp  serverpool.h  serversocket.cpp  serversocket.h  user.cpp  user.h  usermanager.cpp  usermanager.h
tmdl_compiler/trunk/: compiler.rc  trunk.pro
tmdl_compiler/trunk/src/: compiler.cpp  compiler.h  mainwindow.cpp  mainwindow.h  resultdialog.cpp  resultdialog.h  tmdl.h  tmdl_compiler.cpp
tmdl_compiler/trunk/src/ui/: mainwindow.ui  resultdialog.ui
tmdl_viewer/trunk/: trunk.pro  viewer.rc
tmdl_viewer/trunk/src/: mainwindow.cpp  mainwindow.h  model.cpp  model.h  modelloader.cpp  modelloader.h  scene.cpp  scene.h  tmdl_viewer.cpp
tmdl_viewer/trunk/src/ui/: mainwindow.ui
